FEED-580: Comments on feed posts
